--- a/app/views/docs/database.phtml
+++ b/app/views/docs/database.phtml
@@ -5,7 +5,7 @@
     as well as a flexible permissions mechanism to allow you to easily segment data between different users, teams, and roles.
 </p>
 
-<h2><a href="/docs/advanced-database#collection" id="collection">Create Your Collections</a></h2>
+<h2><a href="/docs/database#collection" id="collection">Create Your Collections</a></h2>
 <p>
     Appwrite uses collections as containers of documents.
 The terms collections and documents are used because the Appwrite JSON REST API resembles the API of a traditional NoSQL database. That said, internally, Appwrite can support both SQL and NoSQL database adapters like MariaDB, MySQL, or MongoDB. When working with an SQL adapter, Appwrite will treat your collections as tables and documents as rows on native SQL tables.
@@ -20,7 +20,7 @@ The terms collections and documents are used because the Appwrite JSON REST API 
     <p>You can manage your collections programmatically using one of Appwrite's Server SDKs. You can manage documents with both the Server and Client SDKs.</p>
 </div>
 
-<h3><a href="/docs/advanced-database#permissions" id="permissions">Permissions</a></h3>
+<h3><a href="/docs/database#permissions" id="permissions">Permissions</a></h3>
 <p>
     Once you create your collection, you will reach your collection's settings page, where you can choose the permission model for your collection. There are two types of permissions models available, each one with different pros and cons designed to be flexible to best match your use case.  
 </p>
@@ -40,7 +40,7 @@ The terms collections and documents are used because the Appwrite JSON REST API 
 </div>
 
 
-<h2><a href="/docs/advanced-database#attributes" id="attributes">Create Attributes</a></h2>
+<h2><a href="/docs/database#attributes" id="attributes">Create Attributes</a></h2>
 <p>
     Once you choose your permission model, navigate to your collection's <b>Attributes</b> tab. Attributes are used to define the structure of your documents and help the Appwrite API validate your users' input. Add your first attribute by clicking the <b>Add Attribute</b> button. You can choose between the following types:
 </p>
@@ -95,7 +95,7 @@ The terms collections and documents are used because the Appwrite JSON REST API 
     Depending on your collection's size and other factors, this could take anywhere from a few seconds to a few minutes to complete. You are able to create a document while your attributes are still being processed, however you are not able to use the attributes on the documents until they are <span class="tag">available</span>
 </p>
 
-<h3><a href="/docs/advanced-database#create-documents" id="create-documents">Create Documents</a></h3>
+<h3><a href="/docs/database#create-documents" id="create-documents">Create Documents</a></h3>
 <p>
     Navigate to the <b>Documents</b> tab of your collection and click the <b>Add Document</b> button, or add a document programmatically:
 </p>
@@ -113,10 +113,10 @@ promise.then(function (response) {
 </code></pre>
 </div>
 
-<h3><a href="/docs/advanced-database#finding-documents" id="finding-documents">Finding Documents</a></h3>
+<h3><a href="/docs/database#finding-documents" id="finding-documents">Finding Documents</a></h3>
 
 <div class="notice margin-top-large margin-bottom-large">
-    <p>Note: You can only query correctly indexed documents. More details on this can be found <a href="/docs/advanced-database#indexes" id="indexes">here.</a> </p>
+    <p>Note: You can only query correctly indexed documents. More details on this can be found <a href="/docs/database#indexes" id="indexes">here.</a> </p>
 </div>
 <p>
     To find specific documents in a collection, pass an array of query strings as a parameter to the <a href="/docs/server/database#databaseListDocuments">listDocuments</a> endpoint. The SDKs provide a <b>Query</b> class to make query building simpler:
@@ -175,11 +175,11 @@ sdk.database.listDocuments('movies', [
 </code></pre>
 </div>
 
-<h2><a href="/docs/advanced-database#indexes" id="indexes">Indexes</a></h2>
+<h2><a href="/docs/database#indexes" id="indexes">Indexes</a></h2>
 <p>
     Indexes are used by databases to quickly locate data without having to search through every document for results.
     To ensure the best performance, Appwrite requires an index for every query.
-    You can create an index by navigating to the <b>Indexes</b> tab of your collection, or by using your favorite Server SDK. It should be noted that Appwrite's database was designed to protect your queries from performing a full-table scan as this is a footgun and could cause catastrophic performance degregation as you scale up your appwrite project.
+    You can create an index by navigating to the <b>Indexes</b> tab of your collection, or by using your favorite Server SDK. It should be noted that Appwrite's database was designed to protect your queries from performing a full-table scan as this is a footgun and could cause catastrophic performance degregation as you scale up your Appwrite project.
 </p>
 <p>
     The following indexes are currently supported:
@@ -207,9 +207,9 @@ sdk.database.listDocuments('movies', [
     </tbody>
 </table>
 <h3>Pagination</h3>
-<p>Appwrite has full support for pagination to better optmise and scale up your applications built on appwrite. Detailed documentation on pagination and how to implement it can be found <a href="/docs/pagination#offset-pagination" id="offset-pagination">here.</a></p>
+<p>Appwrite has full support for pagination to better optmise and scale up your applications built on Appwrite. Detailed documentation on pagination and how to implement it can be found <a href="/docs/pagination#offset-pagination" id="offset-pagination">here.</a></p>
 
-<h2><a href="/docs/advanced-database#known-limitations" id="known-limitations">Known Limitations</a></h2>
+<h2><a href="/docs/database#known-limitations" id="known-limitations">Known Limitations</a></h2>
 <h3>Relationships</h3>
 <p>tbd</p>
 <h3>OR query on multiple attributes</h3>
@@ -217,5 +217,5 @@ sdk.database.listDocuments('movies', [
 <h3>Array contains query</h3>
 <p>tbd</p>
 
-<h2><a href="/docs/advanced-database#benchmarks" id="benchmarks">Benchmarks</a></h2>
+<h2><a href="/docs/database#benchmarks" id="benchmarks">Benchmarks</a></h2>
 <p>tbd</p>
