--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -71,7 +71,7 @@ $cols = [
 
                 <ul class="margin-bottom">
                     <li><a href="/docs/realtime">Realtime</a></li>
-                    <li><a href="/docs/advanced-database">Database</a></li>
+                    <li><a href="/docs/database">Database</a></li>
                     <li><a href="/docs/functions">Functions</a></li>
                     <li><a href="/docs/keys">API Keys</a></li>
                     <li><a href="/docs/webhooks">Webhooks</a></li>
