--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -262,6 +262,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
             return $y - $x;
         });
 
+        var_dump($rateKey);
         $rateKey = array_map(function($element)
         {
             $element = mb_substr($element, 0, mb_strpos($element, ':'));
