Changes `Learn more` to `Guides`

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -66,7 +66,7 @@ $cols = [
                 </ul>
 
                 <div class="margin-bottom-small">
-                    <b class="text-size-small">Learn More</b>
+                    <b class="text-size-small">Guides</b>
                 </div>
 
                 <ul class="margin-bottom">
