--- a/app/views/docs/database.phtml
+++ b/app/views/docs/database.phtml
@@ -38,9 +38,7 @@ The terms collections and documents are used because the Appwrite JSON REST API 
 <div class="notice margin-top-large margin-bottom-large">
     <h5>Active Session Required</h5>
 
-    <p>For security purposes, an active Account session is required to create resources. So, even if wildcard write permissions are set, only logged-in users can create documents in a collection. If you require this behavior for your app, create an anonymous session first. An active session helps Appwrite enforce rate-control limits and protect your projects from intensive write operations.
-
-I think it can also be a good idea to add a link to the anonymous session docs.</p>
+    <p>For security purposes, an active Account session is required to create resources. So, even if wildcard write permissions are set, only logged-in users can create documents in a collection. If you require this behavior for your app, create an <a href="/docs/client/account?sdk=web-default#accountCreateAnonymousSession" target="_blank">anonymous session</a> first. An active session helps Appwrite enforce rate-control limits and protect your projects from intensive write operations.</p>
 </div>
 
 
@@ -117,10 +115,11 @@ promise.then(function (response) {
 </code></pre>
 </div>
 
-<h3><a href="/docs/database#finding-documents" id="finding-documents">Finding Documents</a></h3>
+<h3><a href="/docs/database#querying-documents" id="querying-documents">Querying Documents</a></h3>
 
 <div class="notice margin-top-large margin-bottom-large">
-    <p>Note: You can only query correctly indexed documents. More details on this can be found <a href="/docs/database#indexes" id="indexes">here.</a> </p>
+    <h4>Indexes Required</h4>
+    <p>You can only query correctly indexed queries. You can easily add new indexes from both the Appwrite console or one of the <a href="/docs/sdks#server" target="_blank">server SDKs</a>. Appwrite uses this limitation to enforce optimized queries for maximum performance and scalability of your collection. You can learn more about it on the<a href="/docs/database#indexes" id="indexes">Appwrite Indexes</a> section.</p>
 </div>
 <p>
     To find specific documents in a collection, pass an array of query strings as a parameter to the <a href="/docs/server/database#databaseListDocuments">listDocuments</a> endpoint. The SDKs provide a <b>Query</b> class to make query building simpler:
