--- a/app/views/docs/database.phtml
+++ b/app/views/docs/database.phtml
@@ -119,7 +119,7 @@ The terms collections and documents are used because the Appwrite JSON REST API 
     <li>
         <h3>Flutter</h3>
         <div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
-            <pre class="line-numbers"><code>import 'package:appwrite/appwrite.dart';
+            <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:appwrite/appwrite.dart';
             void main() async {
                 final client = Client();
                 final database = Database(client);
@@ -144,14 +144,30 @@ The terms collections and documents are used because the Appwrite JSON REST API 
 <p>
     To find specific documents in a collection, pass an array of query strings as a parameter to the <a href="/docs/server/database#databaseListDocuments">listDocuments</a> endpoint. The SDKs provide a <b>Query</b> class to make query building simpler:
 </p>
-<div class="ide" data-lang="javascript" data-lang-label="Web SDK">
-    <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Query } from "appwrite";
+<ul class="phases clear" data-ui-phases>
+    <li>
+        <h3>Web</h3>
+        <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
+        <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Query } from "appwrite";
 
 sdk.database.listDocuments('movies', [
     Query.equal('title', 'Avatar')
 ]);
 </code></pre>
-</div>
+        </div>
+    </li>
+    <li>
+        <h3>Flutter</h3>
+        <div class="ide" data-lang="javascript" data-lang-label="Flutter SDK">
+        <pre class="line-numbers"><code class="prism language-dart" data-prism>import { Query } from "appwrite";
+
+sdk.database.listDocuments('movies', [
+    Query.equal('title', 'Avatar')
+]);
+</code></pre>
+        </div>
+    </li>
+</ul>
 
 <p>The following operators are currently supported:</p>
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
