--- a/app/views/docs/pagination.phtml
+++ b/app/views/docs/pagination.phtml
@@ -137,7 +137,7 @@ func main() {
     Additionally to the <span class="tag">cursor</span> you can pass the cursor position as the <span class="tag">cursorDirection</span> before and after allowing you to get paginate back and forth.
 </p>
 
-<ul class="phases clear">
+<ul class="phases clear" data-ui-phases>
     <li>
         <h3>Web</h3>
         <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
