--- a/app/views/docs/security.phtml
+++ b/app/views/docs/security.phtml
@@ -10,7 +10,7 @@
 
 <h2>Data Encryption</h2>
 
-<p>By default, Appwrite stores all your server sensitive information encrypted. This information includes Webhooks HTTP passwords, Tasks HTTP passwords, Cloud Functions custom environment vars and secrets, API keys secret key (from v0.7), and OAuth secret tokens. All the data is encrypted using your server private encryption key, configurable from your server <a href="/docs/environment-variables">environment variables</a>.</p>
+<p>By default, Appwrite stores all your server sensitive information encrypted. This information includes Webhooks HTTP passwords, Cloud Functions custom environment vars and secrets, API keys secret key (from v0.7), and OAuth secret tokens. All the data is encrypted using your server private encryption key, configurable from your server <a href="/docs/environment-variables">environment variables</a>.</p>
 
 <h2>Storage Encryption</h2>
 
