--- a/app/views/docs/database.phtml
+++ b/app/views/docs/database.phtml
@@ -135,7 +135,7 @@ void main() async {
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+        <div class="ide" data-lang="android" data-lang-label="Android SDK">
             <pre class="line-numbers"><code class="prism language-android" data-prism>import androidx.appcompat.app.AppCompatActivity
 import android.os.Bundle
 import kotlinx.coroutines.GlobalScope
@@ -218,7 +218,7 @@ sdk.database.listDocuments('movies', [
     </li>
     <li>
         <h3>Flutter</h3>
-        <div class="ide" data-lang="javascript" data-lang-label="Flutter SDK">
+        <div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
             <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:appwrite/appwrite.dart';
 
 void main() async {
@@ -238,7 +238,7 @@ void main() async {
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+        <div class="ide" data-lang="android" data-lang-label="Android SDK">
             <pre class="line-numbers"><code class="prism language-android" data-prism>import androidx.appcompat.app.AppCompatActivity
 import android.os.Bundle
 import kotlinx.coroutines.GlobalScope
@@ -368,7 +368,7 @@ void main() async {
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+        <div class="ide" data-lang="android" data-lang-label="Android SDK">
             <pre class="line-numbers"><code class="prism language-android" data-prism>import androidx.appcompat.app.AppCompatActivity
 import android.os.Bundle
 import kotlinx.coroutines.GlobalScope
