Fixed Flutter code lang

--- a/app/views/docs/database.phtml
+++ b/app/views/docs/database.phtml
@@ -346,7 +346,7 @@ func main() {
     </li>
     <li>
         <h3>Flutter</h3>
-        <div class="ide" data-lang="javascript" data-lang-label="Flutter SDK">
+        <div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
             <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:appwrite/appwrite.dart';
 
 void main() async {
